--- a/src/components/Table/ui/Table/Table.css
+++ b/src/components/Table/ui/Table/Table.css
@@ -1,26 +1,27 @@
-.ui-kit-table-wrapper {
+.ui-kit-table__wrapper {
 	position: relative;
 }
 
-.ui-kit-table-container {
+.ui-kit-table__container {
 	position: relative;
 
 	overflow-x: auto;
 }
 
-.ui-kit-table-table {
-	width: available;
+.ui-kit-table__table {
+	width: -webkit-fill-available;
+	width: -moz-available;
 	height: 100%;
 	min-height: 1%;
 
 	table-layout: fixed;
 }
 
-.ui-kit-table-tr-container {
+.ui-kit-table__tr-container {
 	height: max-content;
 }
 
-.ui-kit-table-tr-container > th {
+.ui-kit-table__tr-container > th {
 	position: relative;
 
 	align-self: flex-start;
@@ -28,15 +29,15 @@
 	background: var(--faint-weak);
 }
 
-.ui-kit-table-tbody-container td {
+.ui-kit-table__tbody td {
 	position: relative;
 }
 
-.ui-kit-table-tr-container > th:first-child {
+.ui-kit-table__tr-container > th:first-child {
 	border-radius: 0 0 0 16px;
 }
 
-.ui-kit-table-tr-container > th:last-child {
+.ui-kit-table__tr-container > th:last-child {
 	border-radius: 0 0 16px;
 }
 
