style(components): add custom data attribute for disabled container

--- a/src/components/Checkbox/Checkbox.css
+++ b/src/components/Checkbox/Checkbox.css
@@ -2,7 +2,7 @@
 	width: fit-content;
 }
 
-.ui-kit-checkbox__wrapper-disabled {
+.ui-kit-checkbox__wrapper[data-disabled] {
 	cursor: not-allowed;
 }
 
