--- a/src/components/DatePickerrr/ui/DaysGrid/ui/Day/Day.css
+++ b/src/components/DatePickerrr/ui/DaysGrid/ui/Day/Day.css
@@ -1,55 +1,42 @@
-.ui-kit-day {
+.ui-kit-days-grid__day {
 	position: relative;
 
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 34px;
-	height: 34px;
+	width: 100%;
+	height: 100%;
+	padding: 0;
 
 	color: var(--faint-middle);
 	font-weight: var(--fw-medium);
 	font-size: var(--fs-sm);
 	line-height: 100%;
 
-	background-color: var(--base-weak);
-	border: none;
+	background-color: transparent;
 
+	border: none;
 	border-radius: var(--brad-circle);
 
 	transition: 0.3s all;
 }
 
-.ui-kit-day::before {
-	position: absolute;
-	top: -4px;
-	right: -4px;
-	bottom: -4px;
-	left: -4px;
-	z-index: -1;
-
-	background-color: inherit;
-	border-radius: var(--brad-circle);
-
-	content: "";
-}
-
-.ui-kit-day--week {
+.ui-kit-days-grid__day--week {
 	color: var(--accent-strong);
 }
 
-.ui-kit-day--current-month {
+.ui-kit-days-grid__day--current-month {
 	color: var(--base-strong);
 
 	cursor: pointer;
 }
 
-.ui-kit-day--current-month:hover,
-.ui-kit-day--current-month:focus {
+.ui-kit-days-grid__day--current-month:hover,
+.ui-kit-days-grid__day--current-month:focus {
 	background-color: var(--faint-weak);
 }
 
-.ui-kit-day--today {
+.ui-kit-days-grid__day--today {
 	color: var(--base-strong);
 	font-weight: var(--fw-semibold);
 
@@ -57,7 +44,7 @@
 	cursor: pointer;
 }
 
-.ui-kit-day--selected {
+.ui-kit-days-grid__day--selected {
 	color: var(--base-weak);
 	font-weight: var(--fw-semibold);
 
@@ -65,18 +52,13 @@
 	cursor: pointer;
 }
 
+.ui-kit-days-grid__day--selected:hover,
+.ui-kit-days-grid__day--selected:focus {
+	background-color: var(--complement-strong-darker);
+}
+
 @media screen and (max-width: 600px) {
-	.ui-kit-day {
-		width: 26px;
-		height: 26px;
-
+	.ui-kit-days-grid__day {
 		font-size: var(--fs-xs);
-	}
-
-	.ui-kit-day::before {
-		top: -2px;
-		right: -2px;
-		bottom: -2px;
-		left: -2px;
 	}
 }
