refactor(DatePicker): add tests and popup control

--- a/src/components/DatePickerrr/ui/DatePickerProvider/DatePickerProvider.css
+++ b/src/components/DatePickerrr/ui/DatePickerProvider/DatePickerProvider.css
@@ -1,8 +1,50 @@
 .ui-kit-date-picker__container {
 	position: absolute;
+	z-index: 99999;
 
 	display: grid;
-	row-gap: 10px;
 
 	box-shadow: 0 10px 15px 0 rgb(66 71 77 / 0.1);
+	transform: translateY(50px);
+
+	animation-name: in;
+	animation-duration: 200ms;
+	row-gap: 10px;
+}
+
+.ui-kit-date-picker__container--close {
+	animation-name: out;
+	animation-duration: 200ms;
+}
+
+.ui-kit-date-picker__container--top {
+	transform: translateY(-102%);
+}
+
+@keyframes in {
+	from {
+		grid-template-rows: 0;
+
+		opacity: 0;
+	}
+
+	to {
+		grid-template-rows: 50px;
+
+		opacity: 1;
+	}
+}
+
+@keyframes out {
+	from {
+		grid-template-rows: 50px;
+
+		opacity: 1;
+	}
+
+	to {
+		grid-template-rows: 0;
+
+		opacity: 0;
+	}
 }
