--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -1,9 +1,14 @@
 .ui-kit-tooltip {
+	color: var(--base-strong);
 	font-size: var(--fs-sm);
 	line-height: var(--lh-sm-text);
 }
 
-.ui-kit-tooltip:is(.ant-tooltip-placement-bottom, .ant-tooltip-placement-bottomLeft, .ant-tooltip-placement-bottomRight) {
+.ui-kit-tooltip:is(
+		.ant-tooltip-placement-bottom,
+		.ant-tooltip-placement-bottomLeft,
+		.ant-tooltip-placement-bottomRight
+	) {
 	padding-top: 10px;
 }
 
