fix(DatePicker): add position popup

--- a/src/components/DatePicker/ui/DatePickerProvider/DatePickerProvider.css
+++ b/src/components/DatePicker/ui/DatePickerProvider/DatePickerProvider.css
@@ -24,6 +24,14 @@
 	transform: translateY(calc(-100% - 10px));
 }
 
+.ui-kit-date-picker__container.left {
+	left: 0;
+}
+
+.ui-kit-date-picker__container.right {
+	right: 0;
+}
+
 @keyframes in {
 	from {
 		grid-template-rows: 0;
