fix(DatePicker): add conversion to string, add rendering to right side, fix bug with loss of focus

--- a/src/components/DatePicker/ui/DatePickerProvider/DatePickerProvider.css
+++ b/src/components/DatePicker/ui/DatePickerProvider/DatePickerProvider.css
@@ -24,11 +24,7 @@
 	transform: translateY(calc(-100% - 10px));
 }
 
-.ui-kit-date-picker__container.left {
-	left: 0;
-}
-
-.ui-kit-date-picker__container.right {
+.ui-kit-date-picker__container--right {
 	right: 0;
 }
 
