--- a/src/components/DatePicker/ui/ViewInput/ViewInput.css
+++ b/src/components/DatePicker/ui/ViewInput/ViewInput.css
@@ -137,7 +137,7 @@
 	transform: translateY(-50%);
 }
 
-.ui-kit-date-picker__error-tooltip {
+.ui-kit-date-picker__error-tooltip.ui-kit-date-picker__error-tooltip {
 	color: var(--critic-strong);
 }
 
