--- a/src/assets/SvgAssets.css
+++ b/src/assets/SvgAssets.css
@@ -1,8 +1,6 @@
 .svg-template code {
 	padding: 4px;
-
 	font-weight: 700;
-
 	background-color: rgb(194 194 194 / 0.2);
 }
 
@@ -12,6 +10,7 @@
 	gap: 30px;
 	align-items: flex-start;
 	justify-content: center;
+
 	width: 100%;
 
 	font-size: 12px;
@@ -21,7 +20,6 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 10px;
-
 	font-size: 12px;
 }
 
@@ -29,8 +27,7 @@
 	display: grid;
 	grid-row-gap: 2px;
 	grid-template-rows: 1fr min-content;
-	align-items: center;
-	justify-items: center;
+	place-items: center center;
 
 	padding: 2px;
 }
