--- a/src/components/DatePicker/ui/DaysGrid/DaysGrid.css
+++ b/src/components/DatePicker/ui/DaysGrid/DaysGrid.css
@@ -1,16 +1,14 @@
 .ui-kit-days-grid {
 	display: grid;
-	grid-template-rows: repeat(7, 42px);
 	grid-template-columns: repeat(7, 42px);
-
+	grid-template-rows: repeat(7, 42px);
 	gap: 6px;
-	align-items: center;
-	justify-items: center;
+	place-items: center center;
 }
 
 @media screen and (max-width: 600px) {
 	.ui-kit-days-grid {
-		grid-template-rows: repeat(7, 32px);
 		grid-template-columns: repeat(7, 32px);
+		grid-template-rows: repeat(7, 32px);
 	}
 }
