--- a/src/components/Radio/Radio.css
+++ b/src/components/Radio/Radio.css
@@ -11,13 +11,14 @@
 }
 
 .ui-kit-radio {
+	cursor: pointer;
+
 	display: flex;
 	gap: 10px;
 	align-items: center;
 	justify-content: flex-start;
-	width: fit-content;
 
-	cursor: pointer;
+	width: fit-content;
 }
 
 .ui-kit-radio-input__hidden:disabled + .ui-kit-radio {
@@ -30,13 +31,16 @@
 	flex-shrink: 0;
 	align-items: center;
 	justify-content: center;
+
 	width: 20px;
 	height: 20px;
 
 	border: 3px solid transparent;
 	border-radius: var(--brad-circle);
 
-	transition: border-color 0.1s linear, background-color 0.1s linear;
+	transition:
+		border-color 0.1s linear,
+		background-color 0.1s linear;
 }
 
 .ui-kit-radio-fakeInput__theme-white {
@@ -81,9 +85,7 @@
 .ui-kit-radio-fakeInput-icon {
 	width: 10px;
 	height: 10px;
-
 	border-radius: 50%;
-
 	transition: background-color 0.1s linear;
 }
 
@@ -110,11 +112,12 @@
 
 /* Стили для текста */
 .ui-kit-radio-label {
-	color: var(--base-strong);
-	font-weight: 500;
 	font-size: var(--fs-sm);
-
-	transition: font-weight 0.1s linear, color 0.1s linear;
+	font-weight: 500;
+	color: var(--base-strong);
+	transition:
+		font-weight 0.1s linear,
+		color 0.1s linear;
 }
 
 .ui-kit-radio-input__hidden:checked:not(:disabled) + .ui-kit-radio .ui-kit-radio-label {
