--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,20 +1,19 @@
 .ant-table {
-	color: var(--base-strong);
 	font-size: var(--fs-xs);
 	line-height: var(--lh-xs);
+	color: var(--base-strong);
 }
 
 .ant-table-thead > tr > th {
-	color: var(--base-strong);
 	font-weight: var(--fw-semibold);
-
+	color: var(--base-strong);
 	background-color: var(--faint-weak);
 	border-bottom: 0;
 }
 
 .ant-table-thead
 	> tr
-	> th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
+	> th:not(:last-child, .ant-table-selection-column, .ant-table-row-expand-icon-cell, [colspan])::before {
 	content: none;
 }
 
