--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -5,8 +5,6 @@
 	align-items: center;
 	width: 100%;
 
-	height: 44px;
-
 	font-weight: var(--fw-medium);
 
 	border: 1px solid transparent;
@@ -19,6 +17,18 @@
 
 .ui-kit-input-wrapper.icon {
 	padding-left: 14px;
+}
+
+.ui-kit-input-wrapper.medium {
+	height: var(--h-medium);
+}
+
+.ui-kit-input-wrapper.large {
+	height: var(--h-large);
+}
+
+.ui-kit-input-wrapper.small {
+	height: var(--h-small);
 }
 
 .ui-kit-input-wrapper.focused {
