--- a/src/components/DatePicker/ui/ViewInput/ViewInput.css
+++ b/src/components/DatePicker/ui/ViewInput/ViewInput.css
@@ -12,7 +12,6 @@
 	display: flex;
 	align-items: center;
 	width: 100%;
-	height: 44px;
 	padding: 8px 14px 8px 40px;
 
 	font-weight: var(--fw-medium);
@@ -38,6 +37,18 @@
 .ui-kit-date-picker__input.white {
 	background-color: var(--base-weak);
 	border-color: var(--back-faint-weak-darker);
+}
+
+.ui-kit-date-picker__input.small {
+	height: var(--h-small);
+}
+
+.ui-kit-date-picker__input.medium {
+	height: var(--h-medium);
+}
+
+.ui-kit-date-picker__input.large {
+	height: var(--h-large);
 }
 
 .ui-kit-date-picker__input.gray {
